--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
-
 <head>
-  <title>Title</title>
+  <title>Create Slider As You Wish</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +12,6 @@
     integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <div class="container">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
@@ -47,7 +44,7 @@
       </div>
     </div>
   </div>
-  <!-- Optional JavaScript -->
+  <!-- Mandatory JavaScript -->
   <script src="./app.js"></script>
 </body>
 
